# XenoREADER

./: .clang-format  CMakeLists.txt  LICENSE  Notes.MD  README.MD
XenoREADER/: CMakeLists.txt
XenoREADER/source/: main.c
include/: BootRecord.h  DynamicArray.h  Sector.h  XenoDir.h  XenoDirInternal.h  XenoFile.h  XenoFileData.h  XenoFileInternal.h  XenoReader.h  XenoSector.h  XenoToC.h  defines.h
libXenoReader/: CMakeLists.txt
libXenoReader/include/: Sector.h  XenoBuffer.h  XenoDir.h  XenoFileInternal.h
libXenoReader/source/: XenoBuffer.c  XenoDir.c  XenoFile.c  XenoReader.c
source/: BootRecord.c  DynamicArray.c  XenoDir.c  XenoFile.c  XenoFileData.c  XenoReader.c  main.c
